Update in horror movie
Fixed refresh of the page after favourite button clicked by maintaing the state.
Every time render() function is called after favourite clicked.

--- a/poketimes/poketimes/src/App.css
+++ b/poketimes/poketimes/src/App.css
@@ -34,17 +34,25 @@
 
 .btn{
   background-color: green
+
 }
 .btn:visited{
   background-color: red!important;
+  color: white;
+
 
 }
 .btn:hover {
   background-color: red!important;
+  color: white;
+
 }
 .btn:active{
   background-color: red!important;
+  color: white;
+
 }
 .btn:focus{
   background-color: red!important;
+  color: white;
 }
