Update in styling

--- a/FireBase_React_Redux/firebase_redux/src/index.css
+++ b/FireBase_React_Redux/firebase_redux/src/index.css
@@ -1,14 +1,29 @@
+
+html{
+  min-height: 100%
+}
+
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-sarif;
+
+  background:url(/img/background.jpeg)  no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height:100%
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+form{
+  padding: 20px;
+  margin-top : 60px;
 }
+
+form button, form h5{
+  margin:20px , 0;
+}
+
